# git-grabber

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  ruff.toml
.github/workflows/: docker-ci.yml
app/: __main__.py
app/common/: __init__.py  clone.py  pull.py  update.py
app/github/: __init__.py  fetch.py
app/model/: repository.py
gitgrabber/: __main__.py
